welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:18: error: ':' expected but ')' found.
def coloriage(T : Array[Color],decalage)
                                       ^Array2:54: error: identifier expected but '}' found.
}
^